Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52534

MouseArea drag threshold doesn't work with preventStealing

XMLWordPrintable

    • I5ce340ca591ec924eebed1fe7acda18d31301fc5

      MouseArea drag.threashold is not considered when preventStealing is true.
      The following snippet shows the problem.

      import QtQuick 2.6
      import QtQuick.Controls 1.4
      
      ApplicationWindow {
          id: root
          visible: true
          width: 400
          height: 400
      
          MouseArea {
              id: mousearea
              anchors.fill: parent
              drag.target: rectangle
              drag.threshold: 100
              propagateComposedEvents: true
              preventStealing: true
          }
      
          Rectangle {
              id: rectangle
              color: "red"
              width: 30
              height: width
          }
      }
      
      

      Is it a correct behaviour?

        For Gerrit Dashboard: QTBUG-52534
        # Subject Branch Project Status CR V

            paangele Paolo Angelelli
            cuke Filippo Cucchetto
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes